k8s/apps/home-assistant/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - port: 80
      targetPort: 8123
      protocol: TCP
